# cloud-logs

./: .pylintrc  README.md  pyproject.toml
cloud_logs/gcp/: log.py
src/cloud_logs/: cli.py  stat.py
src/cloud_logs/gcp/: log.py
